--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==20.1.0
 importlib-metadata==4.0.1
 mysql-connector-python==8.0.23
 psycopg2==2.8.6
+python-dotenv==0.17.1
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
